added width & height props && fixed minSize

--- a/demo/index.html
+++ b/demo/index.html
@@ -8,7 +8,16 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.2/normalize.min.css" rel="stylesheet">
 
     <style>
-
+        body {
+            background: #eee;
+        }
+        div {
+            background: #fff
+        }
+        .header {
+            background: grey;
+            height:150px;
+        }
         .Resizer {
             -moz-box-sizing: border-box;
             -webkit-box-sizing: border-box;
